--- a/presentation/src/main/res/values-night-v21/themes.xml
+++ b/presentation/src/main/res/values-night-v21/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="ICECLightTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="ICECDarkTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:windowBackground">@color/white</item>
         <item name="android:statusBarColor">@color/black</item>
     </style>
