--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -9,13 +9,13 @@
         <include
             android:id="@+id/top_bar"
             layout="@layout/top_bar"
-            app:layout_constraintBottom_toTopOf="@+id/image"
+            app:layout_constraintBottom_toTopOf="@+id/imageview_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/image"
+            android:id="@+id/imageview_image"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:src="@drawable/ic_launcher_background"
@@ -34,7 +34,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image"
+            app:layout_constraintTop_toBottomOf="@+id/imageview_image"
             app:layout_constraintVertical_weight="0.5"
             app:navGraph="@navigation/nav_graph" />
 
