--- a/presentation/src/main/res/layout/fragment_select_mosaic_edit.xml
+++ b/presentation/src/main/res/layout/fragment_select_mosaic_edit.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/mosaic_button"
+            android:id="@+id/button_mosaic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:outlineProvider="none"
@@ -20,13 +20,13 @@
             app:icon="@drawable/mosaic_icon"
             app:iconGravity="start"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/edit_button"
+            app:layout_constraintEnd_toStartOf="@+id/button_edit"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="UnusedAttribute" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/edit_button"
+            android:id="@+id/button_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:outlineProvider="none"
@@ -39,7 +39,7 @@
             app:iconGravity="start"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/mosaic_button"
+            app:layout_constraintStart_toEndOf="@+id/button_mosaic"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="UnusedAttribute" />
 
