--- a/presentation/src/main/res/layout/top_bar.xml
+++ b/presentation/src/main/res/layout/top_bar.xml
@@ -7,17 +7,17 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/back_button"
+            android:id="@+id/button_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:src="@drawable/back_icon"
-            app:layout_constraintBottom_toBottomOf="@+id/logo"
+            app:layout_constraintBottom_toBottomOf="@+id/imageview_logo"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/logo" />
+            app:layout_constraintTop_toTopOf="@+id/imageview_logo" />
 
         <ImageView
-            android:id="@+id/logo"
+            android:id="@+id/imageview_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/logo_wip"
@@ -27,40 +27,40 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/share_button"
+            android:id="@+id/button_share"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:backgroundTint="@android:color/transparent"
             android:outlineProvider="none"
             android:padding="0dp"
-            android:text="공유"
+            android:text="@string/share_text"
             android:textColor="@color/black"
             android:textSize="13sp"
             app:icon="@drawable/share_icon"
             app:iconGravity="textTop"
             app:iconPadding="2dp"
             app:iconTint="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/back_button"
-            app:layout_constraintEnd_toStartOf="@+id/download_button"
-            app:layout_constraintTop_toTopOf="@+id/back_button" />
+            app:layout_constraintBottom_toBottomOf="@+id/button_back"
+            app:layout_constraintEnd_toStartOf="@+id/button_download"
+            app:layout_constraintTop_toTopOf="@+id/button_back" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/download_button"
+            android:id="@+id/button_download"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:backgroundTint="@android:color/transparent"
             android:outlineProvider="none"
             android:padding="0dp"
-            android:text="저장"
+            android:text="@string/download_text"
             android:textColor="@color/black"
             android:textSize="13sp"
             app:icon="@drawable/download_icon"
             app:iconGravity="textTop"
             app:iconPadding="2dp"
             app:iconTint="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/back_button"
+            app:layout_constraintBottom_toBottomOf="@+id/button_back"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/back_button" />
+            app:layout_constraintTop_toTopOf="@+id/button_back" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
