--- a/presentation/src/main/res/layout/top_bar.xml
+++ b/presentation/src/main/res/layout/top_bar.xml
@@ -1,63 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 
-    <ImageView
-        android:id="@+id/back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:src="@drawable/back_icon"
-        app:layout_constraintBottom_toBottomOf="@+id/logo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/logo" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/logo_wip"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/button_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:src="@drawable/back_icon"
+            app:layout_constraintBottom_toBottomOf="@+id/imageview_logo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageview_logo" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/share_button"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:outlineProvider="none"
-        android:padding="0dp"
-        android:text="공유"
-        android:textSize="13sp"
-        android:textColor="@color/black"
-        android:backgroundTint="@android:color/transparent"
-        app:icon="@drawable/share_icon"
-        app:iconPadding="2dp"
-        app:iconTint="@color/black"
-        app:iconGravity="textTop"
-        app:layout_constraintBottom_toBottomOf="@+id/back_button"
-        app:layout_constraintEnd_toStartOf="@+id/download_button"
-        app:layout_constraintTop_toTopOf="@+id/back_button" />
+        <ImageView
+            android:id="@+id/imageview_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/logo_wip"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/download_button"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:outlineProvider="none"
-        android:padding="0dp"
-        android:text="저장"
-        android:textSize="13sp"
-        android:textColor="@color/black"
-        android:backgroundTint="@android:color/transparent"
-        app:icon="@drawable/download_icon"
-        app:iconPadding="2dp"
-        app:iconTint="@color/black"
-        app:iconGravity="textTop"
-        app:layout_constraintBottom_toBottomOf="@+id/back_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/back_button" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_share"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/transparent"
+            android:outlineProvider="none"
+            android:padding="0dp"
+            android:text="@string/share_text"
+            android:textColor="@color/black"
+            android:textSize="13sp"
+            app:icon="@drawable/share_icon"
+            app:iconGravity="textTop"
+            app:iconPadding="2dp"
+            app:iconTint="@color/black"
+            app:layout_constraintBottom_toBottomOf="@+id/button_back"
+            app:layout_constraintEnd_toStartOf="@+id/button_download"
+            app:layout_constraintTop_toTopOf="@+id/button_back" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_download"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/transparent"
+            android:outlineProvider="none"
+            android:padding="0dp"
+            android:text="@string/download_text"
+            android:textColor="@color/black"
+            android:textSize="13sp"
+            app:icon="@drawable/download_icon"
+            app:iconGravity="textTop"
+            app:iconPadding="2dp"
+            app:iconTint="@color/black"
+            app:layout_constraintBottom_toBottomOf="@+id/button_back"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/button_back" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
