--- a/presentation/src/main/res/values-v21/themes.xml
+++ b/presentation/src/main/res/values-v21/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="ICECLightTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="android:windowBackground">@color/white</item>
-        <item name="android:statusBarColor">@color/black</item>
+    <style name="ICECTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:windowBackground">@color/WindowBackGroundColor</item>
+        <item name="android:statusBarColor">@color/StatusBarColor</item>
     </style>
 </resources>
