--- a/presentation/src/main/res/values-night-v21/colors.xml
+++ b/presentation/src/main/res/values-night-v21/colors.xml
@@ -10,12 +10,12 @@
     <color name="SubColor">#99FA9A85</color>
 
     <!-- System Theme Color -->
-    <color name="WindowBackGroundColor">#FFFFFFFF</color>
+    <color name="WindowBackGroundColor">#121212</color>
     <color name="StatusBarColor">#121212</color>
     <!-- Mosaic Button -->
-    <color name="MosaicButtonColor">#FFFA9A85</color>
+    <color name="MosaicButtonColor">#CB1E1E1E</color>
     <!-- Edit Button -->
-    <color name="EditButtonColor">#FFFA9A85</color>
+    <color name="EditButtonColor">#CB1E1E1E</color>
     <!-- Common Color -->
     <color name="ButtonIconColor">#FFFFFFFF</color>
     <color name="ButtonStrokeColor">#333333</color>
