refactor : 아이콘 이름 변경

--- a/presentation/src/main/res/layout/fragment_select_mosaic_edit.xml
+++ b/presentation/src/main/res/layout/fragment_select_mosaic_edit.xml
@@ -22,7 +22,7 @@
             android:textSize="16sp"
             app:backgroundTint="@color/MosaicButtonColor"
             app:cornerRadius="8dp"
-            app:icon="@drawable/mosaic_icon"
+            app:icon="@drawable/ic_mosaic_15_16"
             app:iconGravity="start"
             app:iconTint="@color/ButtonIconColor"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -48,7 +48,7 @@
             android:textSize="16sp"
             app:backgroundTint="@color/EditButtonColor"
             app:cornerRadius="8dp"
-            app:icon="@drawable/edit_icon"
+            app:icon="@drawable/ic_edit_15_16"
             app:iconGravity="start"
             app:iconTint="@color/ButtonIconColor"
             app:layout_constraintBottom_toBottomOf="parent"
