--- a/presentation/src/main/res/layout/top_bar.xml
+++ b/presentation/src/main/res/layout/top_bar.xml
@@ -11,7 +11,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:src="@drawable/back_icon"
+            android:src="@drawable/ic_back_24_24"
             app:layout_constraintBottom_toBottomOf="@+id/imageview_logo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageview_logo" />
@@ -36,7 +36,7 @@
             android:text="@string/share_text"
             android:textColor="@color/black"
             android:textSize="13sp"
-            app:icon="@drawable/share_icon"
+            app:icon="@drawable/ic_share_18_18"
             app:iconGravity="textTop"
             app:iconPadding="2dp"
             app:iconTint="@color/black"
@@ -54,7 +54,7 @@
             android:text="@string/download_text"
             android:textColor="@color/black"
             android:textSize="13sp"
-            app:icon="@drawable/download_icon"
+            app:icon="@drawable/ic_download_18_18"
             app:iconGravity="textTop"
             app:iconPadding="2dp"
             app:iconTint="@color/black"
