모자이크 / 편집 분기 화면 다크 테마 적용 (#14)
* refactor : 코드 리팩토링

* refactor : dark Theme 적용을 위한 ICEC theme 변경

* feat : dark theme에 추가에 따른 colors-night 추가

* refactor : 아이콘 변경

* refacor : dark theme 추가에 따른 모자이크 버튼, 편집 버튼 변경

* refactor : 코드 리팩토링

* feat : Light Theme일 때, 버튼 stroke 제거

* refactor : 리뷰 반영

* refactor : 아이콘 이름 변경

--- a/presentation/src/main/res/layout/fragment_select_mosaic_edit.xml
+++ b/presentation/src/main/res/layout/fragment_select_mosaic_edit.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -11,36 +11,52 @@
             android:id="@+id/button_mosaic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/notosans_semibold"
+            android:includeFontPadding="false"
             android:outlineProvider="none"
+            android:paddingHorizontal="30dp"
+            android:paddingVertical="10dp"
             android:text="@string/mosaic_text"
+            android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="12sp"
-            app:backgroundTint="@color/MainColor"
-            app:cornerRadius="10dp"
-            app:icon="@drawable/mosaic_icon"
+            android:textSize="16sp"
+            app:backgroundTint="@color/MosaicButtonColor"
+            app:cornerRadius="8dp"
+            app:icon="@drawable/ic_mosaic_15_16"
             app:iconGravity="start"
+            app:iconTint="@color/ButtonIconColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_edit"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:strokeColor="@color/ButtonStrokeColor"
+            app:strokeWidth="1dp"
             tools:ignore="UnusedAttribute" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/notosans_semibold"
+            android:includeFontPadding="false"
             android:outlineProvider="none"
+            android:paddingHorizontal="30dp"
+            android:paddingVertical="10dp"
             android:text="@string/edit_text"
+            android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="12sp"
-            app:backgroundTint="@color/MainColor"
-            app:cornerRadius="10dp"
-            app:icon="@drawable/edit_icon"
+            android:textSize="16sp"
+            app:backgroundTint="@color/EditButtonColor"
+            app:cornerRadius="8dp"
+            app:icon="@drawable/ic_edit_15_16"
             app:iconGravity="start"
+            app:iconTint="@color/ButtonIconColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/button_mosaic"
             app:layout_constraintTop_toTopOf="parent"
+            app:strokeColor="@color/ButtonStrokeColor"
+            app:strokeWidth="1dp"
             tools:ignore="UnusedAttribute" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
